--- a/ApiCreateDocsVIntegracion/ApiCreateDocsVIntegracion.csproj
+++ b/ApiCreateDocsVIntegracion/ApiCreateDocsVIntegracion.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BarcodeLib" Version="2.4.0" />
+    <PackageReference Include="Nancy" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Select.HtmlToPdf.NetCore" Version="21.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
